--- a/WeatherApi.Api/appsettings.json
+++ b/WeatherApi.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "OpenMeteoEndpoint": "https://api.open-meteo.com/v1/forecast?latitude={0}&longitude={1}&current_weather=true"
 }
